--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1 class="title">Duvan: My Style guide</h1>
+<!-- colors -->
+<div class="colors">
+
+</div>
     
 </body>
 </html>
