adding more code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <h1 class="title">Duvan: My Style guide</h1>
 <!-- colors -->
-<div class="colors">
+<div class="color-container">
+    <div class="color-yellow">
+
+    </div>
 
 </div>
     
