adding more code

--- a/index.html
+++ b/index.html
@@ -11,8 +11,20 @@
     <h1 class="title">Duvan: My Style guide</h1>
 <!-- colors -->
 <div class="color-container">
+    <h2>Colors</h2>
     <div class="color-yellow">
-
+        <p class="color-label">Yellow</p>
+        <p class="color-hex">#FFFF33</p>
+    </div>
+    &nbsp;
+    <div class="color-blue">
+        <p class="color-label">Blue</p>
+        <p class="color-hex">#0000FF</p>
+    </div>
+    &nbsp;
+    <div class="color-red">
+        <p class="color-red">Red</p>
+        <p class="color-hex">#FF0000</p>
     </div>
 
 </div>
