adding more code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="title">Duvan: My Style guide</h1>
-<!-- colors -->
+<!--COLORS-->
 <div class="color-container">
     <h2>Colors</h2>
     <div class="color-yellow">
@@ -23,9 +23,19 @@
     </div>
     &nbsp;
     <div class="color-red">
-        <p class="color-red">Red</p>
+        <p class="color-label">Red</p>
         <p class="color-hex">#FF0000</p>
     </div>
+    &nbsp;
+    <div class="color-gray">
+        <p class="color-label">Gray</p>
+        <p class="color-hex">#444444</p>
+    </div>
+</div>
+
+<!--FONTS-->
+<div class="fonts-container">
+    
 
 </div>
     
