adding more code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,20 @@
 
 <!--FONTS-->
 <div class="fonts-container">
-    
+    <h2>Fonts</h2>
+    <h3>Different types of font guidelines to be used</h3>
+    <div class="font-container">
+        <div class="nunito-sans">
+            <h4>Nunito Sans</h4>
+            <p class="normal-font">Success doesn't come to you, you have to work for it</p>
+            <p class="italic-font">Success doesn't come to you, you have to work for it</p>
+            <p class="bold-font">Success doesn't come to you, you have to work for it</p>
+         </div>
+         &nbsp;
+
+
+    </div>
+
 
 </div>
     
