adding more code

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="color-hex">#444444</p>
     </div>
 </div>
-
+<!--ENDS COLORS-->
 <!--FONTS-->
 <div class="fonts-container">
     <h2>Fonts</h2>
@@ -50,14 +50,19 @@
             <p class="normal-font">Success doesn't come to you, you have to work for it</p>
             <p class="italic-font">Success doesn't come to you, you have to work for it</p>
             <p class="bold-font">Success doesn't come to you, you have to work for it</p>
-
+        &nbsp;
+        <div class="indie-flower">
+            <h4>Indie Flower</h4>
+            <p class="normal-font">Success doesn't come to you, you have to work for it</p>
+            <p class="italic-font">Success doesn't come to you, you have to work for it</p>
+            <p class="bold-font">Success doesn't come to you, you have to work for it</p>
         </div>
-
-
     </div>
-
-
 </div>
-    
+<!--ENDS FONTS-->
+<!--STYLES-->
+<div class="styles-container"></div>
+    <h2>Text Styles</h2>
+
 </body>
 </html>
