adding more code

--- a/index.html
+++ b/index.html
@@ -61,8 +61,28 @@
 </div>
 <!--ENDS FONTS-->
 <!--STYLES-->
-<div class="styles-container"></div>
+<div class="styles-container">
     <h2>Text Styles</h2>
+    <div class="h1headinng">
+        <h1>H1: Main page heading</h1>
+        <ul>
+            <li>Should be used one time only</li>
+            <li>Font-weight: 700 (bold)</li>
+            <li>Font-size: 33px</li>
+            <li>Font-family: Nunito Sans</li>
+            <li>Color: FFFF33</li>
+        </ul>
+    </div>
+    <div class="h2subheading">
+        <h2>H2: Subheading</h2>
+        <ul>
+            <li></li>
+        </ul>
+
+    </div>
+
+</div>
+    
 
 </body>
 </html>
