adding more code

--- a/index.html
+++ b/index.html
@@ -70,19 +70,31 @@
             <li>Font-weight: 700 (bold)</li>
             <li>Font-size: 33px</li>
             <li>Font-family: Nunito Sans</li>
-            <li>Color: FFFF33</li>
+            <li>Color: #FFFF33</li>
         </ul>
     </div>
     <div class="h2subheading">
         <h2>H2: Subheading</h2>
         <ul>
-            <li></li>
+            <li>You can use any number of H2-H6 elements on any page</li>
+            <li>Font-weight: 500</li>
+            <li>Font-size: 18px</li>
+            <li>Font-family: Poppins</li>
+            <li>Color: #0000FF</li>
         </ul>
-
     </div>
-
+    <div class="paragraph">
+        <p>P: Paragraph text</p>
+        <ul>
+            <li>Can be used as many times as you want</li>
+            <li>Font-weight: 400 (regular)</li>
+            <li>Font-size: 14px</li>
+            <li>Font-family: Poppins</li>
+            <li>Color: #FFFF00</li>
+        </ul>
+    </div>
 </div>
-    
+ <!--ENDS STYLES-->   
 
 </body>
 </html>
