adding more css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p class="bold-font">Success doesn't come to you, you have to work for it</p>
          </div>
          &nbsp;
-        <div class="ephesis">
+        <div class="montserrat">
             <h4>Ephesis</h4>
             <p class="normal-font">Success doesn't come to you, you have to work for it</p>
             <p class="italic-font">Success doesn't come to you, you have to work for it</p>
