adding more css

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
          </div>
          &nbsp;
         <div class="montserrat">
-            <h4>Ephesis</h4>
+            <h4>Montserrat</h4>
             <p class="normal-font">Success doesn't come to you, you have to work for it</p>
             <p class="italic-font">Success doesn't come to you, you have to work for it</p>
             <p class="bold-font">Success doesn't come to you, you have to work for it</p>
         &nbsp;
-        <div class="indie-flower">
-            <h4>Indie Flower</h4>
+        <div class="roboto">
+            <h4>Roboto</h4>
             <p class="normal-font">Success doesn't come to you, you have to work for it</p>
             <p class="italic-font">Success doesn't come to you, you have to work for it</p>
             <p class="bold-font">Success doesn't come to you, you have to work for it</p>
