adding more css

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </div>
     </div>
 </div>
+</div>
 <!--ENDS FONTS-->
 <!--STYLES-->
 <div class="styles-container">
@@ -94,6 +95,7 @@
         </ul>
     </div>
 </div>
+
  <!--ENDS STYLES-->   
 
 </body>
