adding more css

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <div class="styles-container">
     <h2>Text Styles</h2>
     <div class="h1headinng">
-        <h1>H1: Main page heading</h1>
+        <h1 class="special">H1: Main page heading</h1>
         <ul>
             <li>Should be used one time only</li>
             <li>Font-weight: 700 (bold)</li>
