--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="title">Duvan: My Style guide</h1>
+    <h1 class="title">Duvan: My Style Guide</h1>
 <!--COLORS-->
 <div class="color-container">
     <h2>Colors</h2>
